--- a/tasks/templates/registration/login.html
+++ b/tasks/templates/registration/login.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Вход</title>
 </head>
 <body>
