--- a/tasks/templates/tasks/list.html
+++ b/tasks/templates/tasks/list.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <!-- Титул страницы и ссылки на стили, скрипты и прочее могут быть здесь -->
-    <title></title>
+    <title>Список задач</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <div class="container">
+  <div class="row">
+    <div class="col-md-8">Основной контент</div>
+    <div class="col-md-4">Боковая панель</div>
+  </div>
+</div>
+
+    <!-- Тут могут быть подключения к CSS и JavaScript -->
 </head>
 <body>
 
-<!-- Форма добавления задачи -->
-<!-- Метод POST используется для отправки данных формы на сервер -->
 <form method="post">
     {% csrf_token %}
-    <!-- CSRF токен для предотвращения атак CSRF -->
     {{ form.as_p }}
-    <!-- Выводит поля формы в виде параграфов -->
-    <button type="submit">Add Task</button>
-    <!-- Кнопка для отправки формы -->
+    <button class="btn btn-primary">Добавить задачу</button>
 </form>
 
-<!-- Список существующих задач -->
 {% for task in tasks %}
-    <!-- Отображение названия, статуса выполнения и приоритета каждой задачи -->
-     <p>{{ task.title }} - {{ task.completed }} <a href="{% url 'toggle_task' task.id %}">Toggle</a></p>
+    <p>
+        {{ task.title }} - {{ task.completed }}
+        <a href="{% url 'toggle_task' task.id %}">Переключить статус</a>
+        <a href="{% url 'edit_task' task.id %}">Редактировать</a>
+        <a href="{% url 'delete_task' task.id %}">Удалить</a>
+    </p>
 {% endfor %}
-
-<!-- Подвал сайта или дополнительные скрипты могут быть здесь -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 </body>
 </html>
