--- a/tasks/templates/registration/login.html
+++ b/tasks/templates/registration/login.html
@@ -1,17 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Вход</title>
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body>
-    <h2>Вход</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Войти</button>
-    </form>
-    <p>Еще не зарегистрированы? <a href="{% url 'signup' %}">Зарегистрироваться</a></p>
+    <div class="card">
+        <div class="card2">
+            <form class="form" method="post">
+                {% csrf_token %}
+                <p id="heading">Вход</p>
+                {{ form.as_p }}
+                <div class="btn">
+                    <button class="button1" type="submit">Войти</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <script src="{% static 'js/login.js' %}" defer></script>
 </body>
 </html>
