--- a/tasks/templates/tasks/list.html
+++ b/tasks/templates/tasks/list.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <title>Список задач</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/list.css' %}">
     <div class="container">
   <div class="row">
     <div class="col-md-8">Основной контент</div>
@@ -21,13 +23,16 @@
 </form>
 
 {% for task in tasks %}
-    <p>
-        {{ task.title }} - {{ task.completed }}
-        <a href="{% url 'toggle_task' task.id %}">Переключить статус</a>
-        <a href="{% url 'edit_task' task.id %}">Редактировать</a>
-        <a href="{% url 'delete_task' task.id %}">Удалить</a>
-    </p>
+    <div class="task-card">
+        <p>
+            {{ task.title }} - {{ task.completed }}
+            <a href="{% url 'toggle_task' task.id %}">Переключить статус</a>
+            <a href="{% url 'edit_task' task.id %}">Редактировать</a>
+            <a href="{% url 'delete_task' task.id %}">Удалить</a>
+        </p>
+    </div>
 {% endfor %}
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 </body>
