--- a/tasks/static/css/login.css
+++ b/tasks/static/css/login.css
@@ -20,6 +20,7 @@ body, html {
   z-index: 2;
 }
 
+
 h2 {
   text-align: center;
   margin-bottom: 20px;
@@ -33,7 +34,7 @@ form {
   padding-right: 2em;
   padding-bottom: 0.4em;
   background-color: #171717;
-  border-radius: 20px;
+  border-radius: 0;
 }
 
 input[type="text"],
