--- a/tasks/static/css/signup.css
+++ b/tasks/static/css/signup.css
@@ -1,3 +1,5 @@
+/* signup.css */
+
 @keyframes burning {
   0% {
     box-shadow: 0 0 10px #FF3D00, 0 0 20px #FF3D00, 0 0 30px #FF3D00, 0 0 40px #FF6E40, 0 0 70px #FF9E80;
@@ -8,6 +10,20 @@
   100% {
     box-shadow: 0 0 10px #FF3D00, 0 0 20px #FF3D00, 0 0 30px #FF3D00, 0 0 40px #FF6E40, 0 0 70px #FF9E80;
   }
+}
+
+body {
+  overflow: hidden; /* Чтобы избежать прокрутки фона */
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, #6dd5ed, #2193b0);
+  z-index: -1; /* Помещаем фон за форму */
 }
 
 form {
