--- a/tasks/templates/registration/signup.html
+++ b/tasks/templates/registration/signup.html
@@ -8,6 +8,7 @@
     <script src="{% static 'js/signup.js' %}" defer></script>
 </head>
 <body>
+    <div class="background"></div>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
